// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CertificateAuthority /> when remote access is disabled should render component 1`] = `
<div>
  <h3>
    Certificate Authority
  </h3>
  <p>
    You can't delete certificate authority while remote access is enabled. In order to delete it you need to disable the access first.
  </p>
</div>
`;

exports[`<CertificateAuthority /> when remote access is enabled should render component 1`] = `
<div>
  <h3>
    Certificate Authority
  </h3>
  <p>
    Your certificate authority is set up properly. Please note that if you delete it all clients will have their access revoked.
  </p>
  <button
    class="btn btn-primary  col-sm-12 col-lg-3"
    type="button"
  >
     
     
    Delete certificate authority
  </button>
</div>
`;
